--- a/Module 11/Book-examples/external.css
+++ b/Module 11/Book-examples/external.css
@@ -2,3 +2,6 @@
 
    .bg-img {background: url("./layout.webp");}
    .border{ border-width: 2px; border-style: solid;}
+    .border-solid{
+      border: 2px solid rgb(34, 24, 23);
+    }
